salesforce/force-app/main/default/objects/Tier_Pricing__c/Tier_Pricing__c.object-meta.xml
<CustomObject>
    <label>Tier Pricing</label>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Tier Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tier Pricings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>