salesforce/force-app/main/default/objects/Tier_Pricing__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>