salesforce/force-app/main/default/objects/Tier_Pricing__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <referenceTo>Material__c</referenceTo>
    <relationshipLabel>Tier Pricings</relationshipLabel>
    <relationshipName>Tier_Pricings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>